<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/txtStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title_main"
        android:textSize="18sp"
        android:paddingBottom="8dp"/>

    <ListView
        android:id="@+id/listNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_add" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_delete"
            android:layout_marginStart="12dp" />

        <Button
            android:id="@+id/btnToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_toggle_storage"
            android:layout_marginStart="12dp" />
    </LinearLayout>
</LinearLayout>
